--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,23 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>FarmiGo</title>
+    <style>
+      body > .skiptranslate {
+        display: none;
+      }
+
+      .goog-te-banner-frame.skiptranslate {
+        display: none !important;
+      }
+      body {
+        top: 0px !important;
+      }
+      @media print {
+        #google_translate_element {
+          display: none;
+        }
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
